// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnevenSets Finite Activity test 1`] = `
"<div>
    <h2>Uneven sets (finite)</h2>
    <div class=\\"regular slider slick-initialized slick-slider\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"0\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"1\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"2\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"3\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"4\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"5\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>6</h3>
                </div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next slick-disabled\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"\\"><button>1</button></li>
            <li class=\\"slick-active\\"><button>2</button></li>
        </ul>
    </div>
</div>"
`;

exports[`UnevenSets Finite Counting test 1`] = `
"<div>
    <h2>Uneven sets (finite)</h2>
    <div class=\\"regular slider slick-initialized slick-slider\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev slick-disabled\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"0\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"1\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"2\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"3\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"4\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"5\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>6</h3>
                </div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
        </ul>
    </div>
</div>"
`;

exports[`UnevenSets Finite Positioning test 1`] = `
"<div>
    <h2>Uneven sets (finite)</h2>
    <div class=\\"regular slider slick-initialized slick-slider\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev slick-disabled\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"0\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"1\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"2\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"3\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"4\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"5\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>6</h3>
                </div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
        </ul>
    </div>
</div>"
`;

exports[`UnevenSets Infinite Activity test 1`] = `
"<div>
    <h2>Uneven sets (infinite)</h2>
    <div class=\\"regular slider slick-initialized slick-slider\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-4\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"-3\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"-2\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"-1\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>6</h3>
                </div>
                <div data-index=\\"0\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"1\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"2\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"3\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"4\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"5\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>6</h3>
                </div>
                <div data-index=\\"6\\" tabindex=\\"-1\\" class=\\"slick-slide slick-active slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"7\\" tabindex=\\"-1\\" class=\\"slick-slide slick-active slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"8\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"9\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"10\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"11\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>6</h3>
                </div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"\\"><button>1</button></li>
            <li class=\\"slick-active\\"><button>2</button></li>
        </ul>
    </div>
</div>"
`;

exports[`UnevenSets Infinite Counting test 1`] = `
"<div>
    <h2>Uneven sets (infinite)</h2>
    <div class=\\"regular slider slick-initialized slick-slider\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-4\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"-3\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"-2\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"-1\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>6</h3>
                </div>
                <div data-index=\\"0\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"1\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"2\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"3\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"4\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"5\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>6</h3>
                </div>
                <div data-index=\\"6\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"7\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"8\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"9\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"10\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"11\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>6</h3>
                </div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
        </ul>
    </div>
</div>"
`;

exports[`UnevenSets Infinite Positioning test 1`] = `
"<div>
    <h2>Uneven sets (infinite)</h2>
    <div class=\\"regular slider slick-initialized slick-slider\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-4\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"-3\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"-2\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"-1\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>6</h3>
                </div>
                <div data-index=\\"0\\" class=\\"slick-slide slick-active slick-current\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"1\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"2\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"3\\" class=\\"slick-slide slick-active\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"4\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"5\\" class=\\"slick-slide\\" tabindex=\\"-1\\" style=\\"outline: none; width: 0px;\\">
                    <h3>6</h3>
                </div>
                <div data-index=\\"6\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>1</h3>
                </div>
                <div data-index=\\"7\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>2</h3>
                </div>
                <div data-index=\\"8\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>3</h3>
                </div>
                <div data-index=\\"9\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>4</h3>
                </div>
                <div data-index=\\"10\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>5</h3>
                </div>
                <div data-index=\\"11\\" tabindex=\\"-1\\" class=\\"slick-slide slick-cloned\\" style=\\"width: 0px;\\">
                    <h3>6</h3>
                </div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
        </ul>
    </div>
</div>"
`;
